Update english.json file

--- a/src/assets/languages/english.json
+++ b/src/assets/languages/english.json
@@ -23,64 +23,74 @@
         "confirmPassword": "Confirm Password"
       }
     },
-    "navbar": {
-      "links": {
-        "introduction": "Introduction",
-        "malaria101": "Malaria 101",
-        "medsAndLabels": "Medication And Labels",
-        "pcpolicy": "Peace Corps Policy",
-        "infokit": "Infokit"
+
+    "common": {
+      "navbar": {
+        "links": {
+          "introduction": "Introduction",
+          "malaria101": "Malaria 101",
+          "medsAndLabels": "Medication And Labels",
+          "pcpolicy": "Peace Corps Policy",
+          "infokit": "Infokit"
+        }
+      },
+      "header": {
+        "headings": {
+          "titleLeft": "PC Prep",
+          "titleRight": "Kit"
+        },
+        "messages": {
+          "logoutButton": "Logout"
+        }
+      },
+      "splashscreen": {
+        "headings": {
+          "titleLeft": "PC Prep",
+          "titleRight": "Kit"
+        },
+        "descriptions": {
+          "bodyContent": "Brought to you by"
+        }
       }
     },
-    "header": {
-      "headings": {
-        "titleLeft": "PC Prep",
-        "titleRight": "Kit"
+
+    "stages": {
+      "introduction": {
+        "activityintro": {
+          "headings": {
+            "introduction": "Introduction",
+            "welcome": "Welcome"
+          },
+          "descriptions": {
+            "bodyContent": "The next few activites will help us get started with learning about malaria, your responsibilities as a Peace Corps Volunteer, and the way you can protect yourself."
+          },
+          "messages": {
+            "nextButton": "Cool, next"
+          }
+        },
+        "pcpolicy": {
+          "headings": {
+            "introduction": "Introduction"
+          },
+          "descriptions": {
+            "bodyContent1": "So this is Kinda important.",
+            "bodyContent2": "Lets make sure you have it on hand.",
+            "bodyContent3": "Email the official Peace Corps policy to Yourself.",
+            "bodyContent4": "Email will be sent to"
+          },
+          "messages": {
+            "mailButton": "Email to Self"
+          }
+        }
       },
-      "messages": {
-        "logoutButton": "Logout"
-      }
-    },
-    "activityintro": {
-      "headings": {
-        "introduction": "Introduction",
-        "welcome": "Welcome"
-      },
-      "descriptions": {
-        "bodyContent": "The next few activites will help us get started with learning about malaria, your responsibilities as a Peace Corps Volunteer, and the way you can protect yourself."
-      },
-      "messages": {
-        "nextButton": "Cool, next"
-      }
-    },
-    "pcpolicy": {
-      "headings": {
-        "introduction": "Introduction"
-      },
-      "descriptions": {
-        "bodyContent1": "So this is Kinda important.",
-        "bodyContent2": "Lets make sure you have it on hand.",
-        "bodyContent3": "Email the official Peace Corps policy to Yourself.",
-        "bodyContent4": "Email will be sent to"
-      },
-      "messages": {
-        "mailButton": "Email to Self"
-      }
-    },
-    "splashscreen": {
-      "headings": {
-        "titleLeft": "PC Prep",
-        "titleRight": "Kit"
-      },
-      "descriptions": {
-        "bodyContent": "Brought to you by"
-      }
-    },
-    "dragdrop": {
-      "descriptions": {
-        "boxIndicatorDo": "Dos",
-        "boxIndicatorDont": "Don'ts",
-        "boxIndicatorAvailable": "Available to drag" 
+      "malaria101": {
+        "dragdrop": {
+          "descriptions": {
+            "boxIndicatorDo": "Dos",
+            "boxIndicatorDont": "Don'ts",
+            "boxIndicatorAvailable": "Available to drag"
+          }
+        }
       }
     }
   }
