Unlocked Stage Activity

--- a/src/assets/languages/english.json
+++ b/src/assets/languages/english.json
@@ -53,8 +53,10 @@
         }
       }
     },
-
     "stages": {
+      "menu": {
+        "heading": "Main Menu"
+      },      
       "introduction": {
         "heading": "Introduction",
         "activityintro": {
@@ -67,6 +69,32 @@
           "messages": {
             "nextButton": "Cool, next"
           }
+        },
+        "highlightActivity": {
+          "headings": {
+            "question": "Q: What is Malaria?"
+          },
+          "descriptions": {
+            "bodyContent1": "ma.lar.i.a",
+            "bodyContent2": "noun",
+            "bodyContent3": "An intermittent and remittent fever caused by a protozoan parasite that invades the red blood cells. The parasite is transmitted by mosquitoes in many tropical and subtropical regions."
+          },
+          "alerts": {
+            "info": "Highlight the definition of malaria to complete this activity"
+          }
+        },
+        "picturePuzzle": {
+          "descriptions": {
+            "bodyContent": "Take a picture of yourself, someone or something important to you"
+           },
+          "messages": {
+            "capture": "Capture",
+            "afterCapture": "Take another photo",
+            "takePhoto": "Take Photo",
+            "shuffle": "Shuffle",
+            "browseButton": "Choose Existing",
+            "setProPicButton": "Set as profile picture"
+          }           
         },
         "pcpolicy": {
           "descriptions": {
@@ -82,18 +110,88 @@
       },
       "malaria101": {
         "heading": "Malaria 101",
+        "lifecycle": {
+          "heading": "Watch the malaria transmission lifecycle & complete the follow up activity",
+          "labels": [
+                      "Plasmodium / Virus",
+                      "First infected mosquito",
+                      "First infected person",
+                      "Infected red blood cells",
+                      "Second infected mosquito",
+                      "Second infected person"
+                    ],
+          "alerts": {
+            "info": "Drag and drop the images in the container to complete the life cycle"
+          }
+        },
         "dragdrop": {
+          "heading": "Drag and drop the dos and donts of Malaria",
           "descriptions": {
             "boxIndicatorDo": "Dos",
             "boxIndicatorDont": "Don'ts",
             "boxIndicatorAvailable": "Available to drag"
           }
-        }
+        },
+        "oddOneOut": {
+          "heading": "Complete the odd one out quiz on Malaria",
+          "descriptions": {
+            "score": "Score!",
+            "resultText1": "You got",
+            "resultText2": "out of 5 questions right."
+          },
+          "messages": {
+            "resetButton": "Retry"
+          }          
+        }        
       },
       "medsNLabels": {
+        "heading": "Medication & Labels",
+        "memoryGame": {
+          "heading": "Complete the memory game to unlock tips on diagnosis of malaria",
+          "alerts": {
+            "title": "Congratulations!<br>You matched a pair"
+          }
+        },
         "doctorChat": {
           "heading": "Chat With Doctor",
           "introMessage": "Hi, I am a doctor, if you need any help related to malaria, feel free to talk to me" 
+        }        
+      },
+      "peaceCorps": {
+        "heading": "Peace Corps Policy"
+      },
+      "lockedStage": {
+        "heading": "Locked Stage",
+        "howtoplay": {
+          "heading": "Prevent the mosquito from transmitting the virus to the human",
+          "instructions": {
+            "title": "How to play?",
+            "ins1": "Select the inventory item",
+            "ins2": "Use the item to stop the mosquito"
+          },
+          "messages": {
+            "nextButton": "Cool, next"
+          }          
+        },
+        "game": {
+          "legend": {
+            "human": "Human",
+            "mosquito": "Mosquito",
+            "inventory": "Inventory"
+          },
+          "alerts": {
+            "loss": {
+              "title": "Game over!",
+              "content": "The mosquito has transmitted malaria virus!"
+            },
+            "win": {
+              "title": "Good job!",
+              "content": "You completed this activity!"              
+            }
+          },
+          "messages": {
+            "restartButton": "Restart"
+          }          
         }
       }
     }
