Added infokit content

--- a/src/assets/languages/english.json
+++ b/src/assets/languages/english.json
@@ -56,12 +56,22 @@
         "message1": "Congratulations! You have succesfully completed the",
         "message2": "Stage.",
         "buttoninfo": "Go to menu"
+      },
+      "infokit": {
+        "malaria_def": "An intermittent and remittent fever caused by a protozoan parasite that invades the red blood cells. The parasite is transmitted by mosquitoes in many tropical and subtropical regions.",
+        "pc_policy": "This contains Peace Corps Policy",
+        "animation": "The malaria parasite life cycle involves two hosts. During a blood meal, a malaria-infected female Anopheles mosquito inoculates sporozoites into the human host . Sporozoites infect liver cells and mature into schizonts , which rupture and release merozoites.",
+        "do_dont": "Dos <br> Contaminated water around should be disposed. <br> Use Mosquito repellent. <br> Body Should be covered as much as possible <br> <br> Don'ts <br> Don't keep unscreened doors and windows open. <br> Don't play outside in shorts and half/without sleeves clothes",
+        "odd_one_out": "Citronella can replel mosquitos. <br> Malaria is transmitted through mosquito bites. <br> Malaria is transmitted by a mosquito but parasite causes the disease.",
+        "match_meds": "Mefloquine can be used to treat mild or moderate malaria but should not be used to treat severe malaria. <br> Doxycycline is an antibiotic that fights bacteria in the body <br> Malarone works by interfering with the growth of parasites in the red blood cells of the human body.",
+        "side_effects": "Mefloquine, taken every week, may cause upset stomach, dizziness, nausea, headache,vivd dreams, neuropsychiatric side effects. <br> Malarone taken once every day, may cause nausea, vomiting, stomach pain, headache, diarrhea. <br> Doxycycline is an antibiotic which when taken every day, may cause sensitivity to sunlight , and upset stomach.",
+        "doctor_info": "Consult a doctor before you take any medication. Wrong medication can prove to be fatal."
       }
     },
     "stages": {
       "menu": {
         "heading": "Main Menu"
-      },      
+      },
       "introduction": {
         "heading": "Introduction",
         "activityintro": {
@@ -99,7 +109,7 @@
             "shuffle": "Shuffle",
             "browseButton": "Choose Existing",
             "setProPicButton": "Set as profile picture"
-          }           
+          }
         },
         "pcpolicy": {
           "descriptions": {
@@ -146,8 +156,8 @@
           },
           "messages": {
             "resetButton": "Retry"
-          }          
-        }        
+          }
+        }
       },
       "medsNLabels": {
         "heading": "Medication & Labels",
@@ -159,8 +169,8 @@
         },
         "doctorChat": {
           "heading": "Chat With Doctor",
-          "introMessage": "Hi, I am a doctor, if you need any help related to malaria, feel free to talk to me" 
-        }        
+          "introMessage": "Hi, I am a doctor, if you need any help related to malaria, feel free to talk to me"
+        }
       },
       "peaceCorps": {
         "heading": "Peace Corps Policy"
@@ -176,7 +186,7 @@
           },
           "messages": {
             "nextButton": "Cool, next"
-          }          
+          }
         },
         "game": {
           "legend": {
@@ -191,12 +201,12 @@
             },
             "win": {
               "title": "Good job!",
-              "content": "You completed this activity!"              
+              "content": "You completed this activity!"
             }
           },
           "messages": {
             "restartButton": "Restart"
-          }          
+          }
         }
       }
     }
