--- a/src/assets/languages/english.json
+++ b/src/assets/languages/english.json
@@ -61,7 +61,7 @@
     "stages": {
       "menu": {
         "heading": "Main Menu"
-      },      
+      },
       "introduction": {
         "heading": "Introduction",
         "activityintro": {
@@ -99,13 +99,13 @@
             "shuffle": "Shuffle",
             "browseButton": "Choose Existing",
             "setProPicButton": "Set as profile picture"
-          }           
+          }
         },
         "pcpolicy": {
           "descriptions": {
-            "bodyContent1": "So this is Kinda important.",
+            "bodyContent1": "So this is Kind of important.",
             "bodyContent2": "Lets make sure you have it on hand.",
-            "bodyContent3": "Email the official Peace Corps policy to Yourself.",
+            "bodyContent3": "Email the official Peace Corps policy to yourself.",
             "bodyContent4": "Email will be sent to"
           },
           "messages": {
@@ -130,7 +130,7 @@
           }
         },
         "dragdrop": {
-          "heading": "Drag and drop the dos and donts of Malaria",
+          "heading": "Drag and drop the dos and don'ts of Malaria",
           "descriptions": {
             "boxIndicatorDo": "Dos",
             "boxIndicatorDont": "Don'ts",
@@ -146,11 +146,16 @@
           },
           "messages": {
             "resetButton": "Retry"
-          }          
-        }        
+          }
+        }
       },
       "medsNLabels": {
         "heading": "Medication & Labels",
+        "matchMeds": {
+          "headingBase": "Match the medicines with their",
+          "headingSideeffects": "right side-effects",
+          "headingDescription": "right description"
+        },
         "memoryGame": {
           "heading": "Complete the memory game to unlock tips on diagnosis of malaria",
           "alerts": {
@@ -159,8 +164,8 @@
         },
         "doctorChat": {
           "heading": "Chat With Doctor",
-          "introMessage": "Hi, I am a doctor, if you need any help related to malaria, feel free to talk to me" 
-        }        
+          "introMessage": "Hi, I am a doctor, if you need any help related to malaria, feel free to talk to me"
+        }
       },
       "peaceCorps": {
         "heading": "Peace Corps Policy"
@@ -176,7 +181,7 @@
           },
           "messages": {
             "nextButton": "Cool, next"
-          }          
+          }
         },
         "game": {
           "legend": {
@@ -191,12 +196,12 @@
             },
             "win": {
               "title": "Good job!",
-              "content": "You completed this activity!"              
+              "content": "You completed this activity!"
             }
           },
           "messages": {
             "restartButton": "Restart"
-          }          
+          }
         }
       }
     }
