Updated Match Meds Activity (#56)

--- a/src/assets/languages/english.json
+++ b/src/assets/languages/english.json
@@ -113,9 +113,9 @@
         },
         "pcpolicy": {
           "descriptions": {
-            "bodyContent1": "So this is Kinda important.",
+            "bodyContent1": "So this is Kind of important.",
             "bodyContent2": "Lets make sure you have it on hand.",
-            "bodyContent3": "Email the official Peace Corps policy to Yourself.",
+            "bodyContent3": "Email the official Peace Corps policy to yourself.",
             "bodyContent4": "Email will be sent to"
           },
           "messages": {
@@ -140,7 +140,7 @@
           }
         },
         "dragdrop": {
-          "heading": "Drag and drop the dos and donts of Malaria",
+          "heading": "Drag and drop the dos and don'ts of Malaria",
           "descriptions": {
             "boxIndicatorDo": "Dos",
             "boxIndicatorDont": "Don'ts",
@@ -161,6 +161,11 @@
       },
       "medsNLabels": {
         "heading": "Medication & Labels",
+        "matchMeds": {
+          "headingBase": "Match the medicines with their",
+          "headingSideeffects": "right side-effects",
+          "headingDescription": "right description"
+        },
         "memoryGame": {
           "heading": "Complete the memory game to unlock tips on diagnosis of malaria",
           "alerts": {
